--- a/tmux.conf
+++ b/tmux.conf
@@ -64,10 +64,15 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
+set -g default-terminal "alacritty"
 
 # The modes {
 setw -g clock-mode-colour colour135
+
+# Pane divider colors
+set -g pane-border-style fg=darkblue
+set -g pane-active-border-style "bg=default fg=blue"
 
 # }
 
