--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,9 @@ bind-key C-p send-prefix
 set -s escape-time 0
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind c new-window -c "#{pane_curent_path}"
+bind | split-window -h -c "#{pane_curent_path}"
+bind - split-window -v -c "#{pane_curent_path}"
 unbind '"'
 unbind %
 
