--- a/tmux.conf
+++ b/tmux.conf
@@ -72,7 +72,7 @@ set -g default-terminal "alacritty"
 setw -g clock-mode-colour colour135
 
 # Pane divider colors
-set -g pane-border-style fg=darkblue
+set -g pane-border-style fg=colour26
 set -g pane-active-border-style "bg=default fg=blue"
 
 # }
