update tmux with plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+set-option -g history-limit 50000
+
 # rebind the stupid window shortcut
 unbind C-b
 set-option -g prefix C-p
@@ -5,9 +7,8 @@ bind-key C-p send-prefix
 set -s escape-time 0
 
 # split panes using | and -
-bind c new-window -c "#{pane_curent_path}"
-bind | split-window -h -c "#{pane_curent_path}"
-bind - split-window -v -c "#{pane_curent_path}"
+bind | split-window -h
+bind - split-window -v
 unbind '"'
 unbind %
 
@@ -30,6 +31,9 @@ bind -n C-M-l resize-pane -R 5
 bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
+# mouse
+set-option -g mouse off
+
 # stop the stupid renaming
 set-option -g allow-rename off
 
@@ -41,54 +45,38 @@ set-window-option -g mode-keys vi
 ### DESIGN CHANGES ###
 ######################
 
-## Status bar design
-# status line
-#set -g status-utf8 on
 set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
+set -g status-bg "colour236"
+set -g status-fg "colour14"
 
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g clock-mode-colour "colour14"
 
-# Info on left (I don't have a session display for now)
-set -g status-left ''
+setw -g status-left " #S "
+set -g status-right-length "100"
+set -g status-right "#[bg=colour239]#[fg=white] %a %B %-d, %Y #[fg=colour14].:. #[fg=white]%H:%M #[fg=black,bg=colour14] #h #{battery_icon} "
 
-# loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
-
-#set -g default-terminal "screen-256color"
-set -g default-terminal "alacritty"
-
-# The modes {
-setw -g clock-mode-colour colour135
+setw -g window-status-format " #I: #W "
+setw -g window-status-separator ""
 
 # Pane divider colors
-set -g pane-border-style fg=colour26
-set -g pane-active-border-style "bg=default fg=blue"
+set -g pane-border-style fg=colour241
+set -g pane-active-border-style "bg=default fg=colour14"
 
-# }
+setw -g window-status-current-format "#[fg="colour14"] #[fg=white]#I: #W#[fg=colour14] "
 
-# The statusbar {
+#set -g status-right 'Colors: #{battery_color_bg}bg#[default] #{battery_color_fg}fg#[default] #{battery_color_charge_bg}charge_bg#[default] #{battery_color_charge_fg}charge_fg#[default] #{battery_color_status_bg}status_bg#[default] #{battery_color_status_fg}status_fg#[default] | Graph: #{battery_graph} | Icon: #{battery_icon} | Charge Icon: #{battery_icon_charge} | Status Icon: #{battery_icon_status} | Percent: #{battery_percentage} | Remain: #{battery_remain}'
+set -g status-right-length '150'
 
-set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+# Other examples:
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
 
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-# }
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
